--- a/META.yml
+++ b/META.yml
@@ -5,14 +5,14 @@ author:
 build_requires: {}
 configure_requires:
   ExtUtils::MakeMaker: 6.31
-generated_by: 'Dist::Zilla version 2.101241'
+dynamic_config: 0
+generated_by: 'Dist::Zilla version 4.101612, CPAN::Meta::Converter version 2.101610'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
   version: 1.4
 name: Package-Stash
-recommends: {}
 requires:
   Scalar::Util: 0
   Test::Exception: 0
-version: 0.03
+version: 0.04
