Import of DOY/Package-Stash-0.05 from CPAN.
gitpan-cpan-distribution: Package-Stash
gitpan-cpan-version:      0.05
gitpan-cpan-path:         DOY/Package-Stash-0.05.tar.gz
gitpan-cpan-author:       DOY
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -2,7 +2,9 @@
 abstract: 'routines for manipulating stashes'
 author:
   - 'Jesse Luehrs <doy at tozt dot net>'
-build_requires: {}
+build_requires:
+  Test::Exception: 0
+  Test::More: 0.88
 configure_requires:
   ExtUtils::MakeMaker: 6.31
 dynamic_config: 0
@@ -14,5 +16,161 @@ meta-spec:
 name: Package-Stash
 requires:
   Scalar::Util: 0
-  Test::Exception: 0
-version: 0.04
+resources:
+  repository: git://github.com/doy/package-stash.git
+version: 0.05
+x_Dist_Zilla:
+  plugins:
+    -
+      class: Dist::Zilla::Plugin::GatherDir
+      name: '@DOY/@Basic/GatherDir'
+      version: 4.101612
+    -
+      class: Dist::Zilla::Plugin::PruneCruft
+      name: '@DOY/@Basic/PruneCruft'
+      version: 4.101612
+    -
+      class: Dist::Zilla::Plugin::ManifestSkip
+      name: '@DOY/@Basic/ManifestSkip'
+      version: 4.101612
+    -
+      class: Dist::Zilla::Plugin::MetaYAML
+      name: '@DOY/@Basic/MetaYAML'
+      version: 4.101612
+    -
+      class: Dist::Zilla::Plugin::License
+      name: '@DOY/@Basic/License'
+      version: 4.101612
+    -
+      class: Dist::Zilla::Plugin::Readme
+      name: '@DOY/@Basic/Readme'
+      version: 4.101612
+    -
+      class: Dist::Zilla::Plugin::ExtraTests
+      name: '@DOY/@Basic/ExtraTests'
+      version: 4.101612
+    -
+      class: Dist::Zilla::Plugin::ExecDir
+      name: '@DOY/@Basic/ExecDir'
+      version: 4.101612
+    -
+      class: Dist::Zilla::Plugin::ShareDir
+      name: '@DOY/@Basic/ShareDir'
+      version: 4.101612
+    -
+      class: Dist::Zilla::Plugin::MakeMaker
+      name: '@DOY/@Basic/MakeMaker'
+      version: 4.101612
+    -
+      class: Dist::Zilla::Plugin::Manifest
+      name: '@DOY/@Basic/Manifest'
+      version: 4.101612
+    -
+      class: Dist::Zilla::Plugin::TestRelease
+      name: '@DOY/@Basic/TestRelease'
+      version: 4.101612
+    -
+      class: Dist::Zilla::Plugin::ConfirmRelease
+      name: '@DOY/@Basic/ConfirmRelease'
+      version: 4.101612
+    -
+      class: Dist::Zilla::Plugin::UploadToCPAN
+      name: '@DOY/@Basic/UploadToCPAN'
+      version: 4.101612
+    -
+      class: Dist::Zilla::Plugin::MetaConfig
+      name: '@DOY/MetaConfig'
+      version: 4.101612
+    -
+      class: Dist::Zilla::Plugin::MetaJSON
+      name: '@DOY/MetaJSON'
+      version: 4.101612
+    -
+      class: Dist::Zilla::Plugin::NextRelease
+      name: '@DOY/NextRelease'
+      version: 4.101612
+    -
+      class: Dist::Zilla::Plugin::CheckChangesHasContent
+      name: '@DOY/CheckChangesHasContent'
+      version: 0.003
+    -
+      class: Dist::Zilla::Plugin::PkgVersion
+      name: '@DOY/PkgVersion'
+      version: 4.101612
+    -
+      class: Dist::Zilla::Plugin::PodCoverageTests
+      name: '@DOY/PodCoverageTests'
+      version: 4.101612
+    -
+      class: Dist::Zilla::Plugin::PodSyntaxTests
+      name: '@DOY/PodSyntaxTests'
+      version: 4.101612
+    -
+      class: Dist::Zilla::Plugin::NoTabsTests
+      name: '@DOY/NoTabsTests'
+      version: 0.01
+    -
+      class: Dist::Zilla::Plugin::EOLTests
+      name: '@DOY/EOLTests'
+      version: 0.02
+    -
+      class: Dist::Zilla::Plugin::CompileTests
+      name: '@DOY/CompileTests'
+      version: 1.101600
+    -
+      class: Dist::Zilla::Plugin::Repository
+      name: '@DOY/Repository'
+      version: 0.13
+    -
+      class: Dist::Zilla::Plugin::Git::Check
+      name: '@DOY/Git::Check'
+      version: 1.101650
+    -
+      class: Dist::Zilla::Plugin::Git::Tag
+      name: '@DOY/Git::Tag'
+      version: 1.101650
+    -
+      class: Dist::Zilla::Plugin::BumpVersionFromGit
+      name: '@DOY/BumpVersionFromGit'
+      version: 0.006
+    -
+      class: Dist::Zilla::Plugin::PodWeaver
+      name: '@DOY/PodWeaver'
+      version: 3.101530
+    -
+      class: Dist::Zilla::Plugin::Prereq
+      config:
+        Dist::Zilla::Plugin::Prereq:
+          phase: runtime
+          type: requires
+      name: Prereq
+      version: 4.101612
+    -
+      class: Dist::Zilla::Plugin::Prereq
+      config:
+        Dist::Zilla::Plugin::Prereq:
+          phase: test
+          type: requires
+      name: TestRequires
+      version: 4.101612
+    -
+      class: Dist::Zilla::Plugin::FinderCode
+      name: ':InstallModules'
+      version: 4.101612
+    -
+      class: Dist::Zilla::Plugin::FinderCode
+      name: ':TestFiles'
+      version: 4.101612
+    -
+      class: Dist::Zilla::Plugin::FinderCode
+      name: ':ExecFiles'
+      version: 4.101612
+    -
+      class: Dist::Zilla::Plugin::FinderCode
+      name: ':ShareFiles'
+      version: 4.101612
+  zilla:
+    class: Dist::Zilla
+    config:
+      is_trial: 0
+    version: 4.101612
