--- a/META.yml
+++ b/META.yml
@@ -8,7 +8,7 @@ build_requires:
 configure_requires:
   ExtUtils::MakeMaker: 6.31
 dynamic_config: 0
-generated_by: 'Dist::Zilla version 4.101612, CPAN::Meta::Converter version 2.101610'
+generated_by: 'Dist::Zilla version 4.102340, CPAN::Meta::Converter version 2.101670'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -18,77 +18,77 @@ requires:
   Scalar::Util: 0
 resources:
   repository: git://github.com/doy/package-stash.git
-version: 0.05
+version: 0.06
 x_Dist_Zilla:
   plugins:
     -
       class: Dist::Zilla::Plugin::GatherDir
       name: '@DOY/@Basic/GatherDir'
-      version: 4.101612
+      version: 4.102340
     -
       class: Dist::Zilla::Plugin::PruneCruft
       name: '@DOY/@Basic/PruneCruft'
-      version: 4.101612
+      version: 4.102340
     -
       class: Dist::Zilla::Plugin::ManifestSkip
       name: '@DOY/@Basic/ManifestSkip'
-      version: 4.101612
+      version: 4.102340
     -
       class: Dist::Zilla::Plugin::MetaYAML
       name: '@DOY/@Basic/MetaYAML'
-      version: 4.101612
+      version: 4.102340
     -
       class: Dist::Zilla::Plugin::License
       name: '@DOY/@Basic/License'
-      version: 4.101612
+      version: 4.102340
     -
       class: Dist::Zilla::Plugin::Readme
       name: '@DOY/@Basic/Readme'
-      version: 4.101612
+      version: 4.102340
     -
       class: Dist::Zilla::Plugin::ExtraTests
       name: '@DOY/@Basic/ExtraTests'
-      version: 4.101612
+      version: 4.102340
     -
       class: Dist::Zilla::Plugin::ExecDir
       name: '@DOY/@Basic/ExecDir'
-      version: 4.101612
+      version: 4.102340
     -
       class: Dist::Zilla::Plugin::ShareDir
       name: '@DOY/@Basic/ShareDir'
-      version: 4.101612
+      version: 4.102340
     -
       class: Dist::Zilla::Plugin::MakeMaker
       name: '@DOY/@Basic/MakeMaker'
-      version: 4.101612
+      version: 4.102340
     -
       class: Dist::Zilla::Plugin::Manifest
       name: '@DOY/@Basic/Manifest'
-      version: 4.101612
+      version: 4.102340
     -
       class: Dist::Zilla::Plugin::TestRelease
       name: '@DOY/@Basic/TestRelease'
-      version: 4.101612
+      version: 4.102340
     -
       class: Dist::Zilla::Plugin::ConfirmRelease
       name: '@DOY/@Basic/ConfirmRelease'
-      version: 4.101612
+      version: 4.102340
     -
       class: Dist::Zilla::Plugin::UploadToCPAN
       name: '@DOY/@Basic/UploadToCPAN'
-      version: 4.101612
+      version: 4.102340
     -
       class: Dist::Zilla::Plugin::MetaConfig
       name: '@DOY/MetaConfig'
-      version: 4.101612
+      version: 4.102340
     -
       class: Dist::Zilla::Plugin::MetaJSON
       name: '@DOY/MetaJSON'
-      version: 4.101612
+      version: 4.102340
     -
       class: Dist::Zilla::Plugin::NextRelease
       name: '@DOY/NextRelease'
-      version: 4.101612
+      version: 4.102340
     -
       class: Dist::Zilla::Plugin::CheckChangesHasContent
       name: '@DOY/CheckChangesHasContent'
@@ -96,15 +96,15 @@ x_Dist_Zilla:
     -
       class: Dist::Zilla::Plugin::PkgVersion
       name: '@DOY/PkgVersion'
-      version: 4.101612
+      version: 4.102340
     -
       class: Dist::Zilla::Plugin::PodCoverageTests
       name: '@DOY/PodCoverageTests'
-      version: 4.101612
+      version: 4.102340
     -
       class: Dist::Zilla::Plugin::PodSyntaxTests
       name: '@DOY/PodSyntaxTests'
-      version: 4.101612
+      version: 4.102340
     -
       class: Dist::Zilla::Plugin::NoTabsTests
       name: '@DOY/NoTabsTests'
@@ -116,7 +116,7 @@ x_Dist_Zilla:
     -
       class: Dist::Zilla::Plugin::CompileTests
       name: '@DOY/CompileTests'
-      version: 1.101600
+      version: 1.101800
     -
       class: Dist::Zilla::Plugin::Repository
       name: '@DOY/Repository'
@@ -124,11 +124,11 @@ x_Dist_Zilla:
     -
       class: Dist::Zilla::Plugin::Git::Check
       name: '@DOY/Git::Check'
-      version: 1.101650
+      version: 1.101680
     -
       class: Dist::Zilla::Plugin::Git::Tag
       name: '@DOY/Git::Tag'
-      version: 1.101650
+      version: 1.101680
     -
       class: Dist::Zilla::Plugin::BumpVersionFromGit
       name: '@DOY/BumpVersionFromGit'
@@ -136,41 +136,41 @@ x_Dist_Zilla:
     -
       class: Dist::Zilla::Plugin::PodWeaver
       name: '@DOY/PodWeaver'
-      version: 3.101530
+      version: 3.101640
     -
       class: Dist::Zilla::Plugin::Prereq
       config:
-        Dist::Zilla::Plugin::Prereq:
+        Dist::Zilla::Plugin::Prereqs:
           phase: runtime
           type: requires
       name: Prereq
-      version: 4.101612
+      version: 4.102340
     -
       class: Dist::Zilla::Plugin::Prereq
       config:
-        Dist::Zilla::Plugin::Prereq:
+        Dist::Zilla::Plugin::Prereqs:
           phase: test
           type: requires
       name: TestRequires
-      version: 4.101612
+      version: 4.102340
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':InstallModules'
-      version: 4.101612
+      version: 4.102340
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':TestFiles'
-      version: 4.101612
+      version: 4.102340
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':ExecFiles'
-      version: 4.101612
+      version: 4.102340
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':ShareFiles'
-      version: 4.101612
+      version: 4.102340
   zilla:
-    class: Dist::Zilla
+    class: Dist::Zilla::Dist::Builder
     config:
-      is_trial: 0
-    version: 4.101612
+      is_trial: 1
+    version: 4.102340
