--- a/dist.ini
+++ b/dist.ini
@@ -5,10 +5,11 @@ copyright_holder = Jesse Luehrs
 
 [@DOY]
 dist = Package-Stash
+awesome = =inc::MMPackageStash
 
 [Prereq]
 Scalar::Util = 0
 
 [Prereq / TestRequires]
-Test::Exception = 0
+Test::Fatal = 0
 Test::More = 0.88
