Import of DOY/Package-Stash-0.11-TRIAL from CPAN.
gitpan-cpan-distribution: Package-Stash
gitpan-cpan-version:      0.11-TRIAL
gitpan-cpan-path:         DOY/Package-Stash-0.11-TRIAL.tar.gz
gitpan-cpan-author:       DOY
gitpan-cpan-maturity:     developer

--- a/dist.ini
+++ b/dist.ini
@@ -7,9 +7,9 @@ copyright_holder = Jesse Luehrs
 dist = Package-Stash
 awesome = =inc::MMPackageStash
 
-[Prereq]
+[Prereqs]
 Scalar::Util = 0
 
-[Prereq / TestRequires]
+[Prereqs / TestRequires]
 Test::Fatal = 0
 Test::More = 0.88
