Import of DOY/Package-Stash-0.14-TRIAL from CPAN.
gitpan-cpan-distribution: Package-Stash
gitpan-cpan-version:      0.14-TRIAL
gitpan-cpan-path:         DOY/Package-Stash-0.14-TRIAL.tar.gz
gitpan-cpan-author:       DOY
gitpan-cpan-maturity:     developer

--- a/dist.ini
+++ b/dist.ini
@@ -9,8 +9,20 @@ dist = Package-Stash
 awesome = =inc::MMPackageStash
 
 [Prereqs]
+perl = 5.8.3
+Package::DeprecationManager = 0
 Scalar::Util = 0
 
 [Prereqs / TestRequires]
 Test::Fatal = 0
 Test::More = 0.88
+Test::Requires = 0
+
+[Prereqs / TestRecommends]
+Test::LeakTrace = 0
+
+; we maintain a Makefile.PL in the repository to be able to work without dzil,
+; but for the distribution we let dzil generate a Makefile.PL with the proper
+; dependencies and such
+[PruneFiles]
+filenames = Makefile.PL
