--- a/META.yml
+++ b/META.yml
@@ -5,6 +5,7 @@ author:
 build_requires:
   Test::Fatal: 0
   Test::More: 0.88
+  Test::Requires: 0
 configure_requires:
   ExtUtils::MakeMaker: 6.31
 dynamic_config: 0
@@ -15,10 +16,12 @@ meta-spec:
   version: 1.4
 name: Package-Stash
 requires:
+  Package::DeprecationManager: 0
   Scalar::Util: 0
+  perl: 5.8.3
 resources:
   repository: git://github.com/doy/package-stash.git
-version: 0.13
+version: 0.14
 x_Dist_Zilla:
   plugins:
     -
@@ -154,6 +157,18 @@ x_Dist_Zilla:
       name: TestRequires
       version: 4.102342
     -
+      class: Dist::Zilla::Plugin::Prereqs
+      config:
+        Dist::Zilla::Plugin::Prereqs:
+          phase: test
+          type: recommends
+      name: TestRecommends
+      version: 4.102342
+    -
+      class: Dist::Zilla::Plugin::PruneFiles
+      name: PruneFiles
+      version: 4.102342
+    -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':InstallModules'
       version: 4.102342
@@ -172,5 +187,5 @@ x_Dist_Zilla:
   zilla:
     class: Dist::Zilla::Dist::Builder
     config:
-      is_trial: 0
+      is_trial: 1
     version: 4.102342
