--- a/dist.ini
+++ b/dist.ini
@@ -11,6 +11,7 @@ awesome = =inc::MMPackageStash
 [Prereqs]
 perl = 5.8.3
 Package::DeprecationManager = 0
+Package::Stash::XS = 0
 Scalar::Util = 0
 
 [Prereqs / TestRequires]
@@ -20,9 +21,3 @@ Test::Requires = 0
 
 [Prereqs / TestRecommends]
 Test::LeakTrace = 0
-
-; we maintain a Makefile.PL in the repository to be able to work without dzil,
-; but for the distribution we let dzil generate a Makefile.PL with the proper
-; dependencies and such
-[PruneFiles]
-filenames = Makefile.PL
