Import of DOY/Package-Stash-0.17-TRIAL from CPAN.
gitpan-cpan-distribution: Package-Stash
gitpan-cpan-version:      0.17-TRIAL
gitpan-cpan-path:         DOY/Package-Stash-0.17-TRIAL.tar.gz
gitpan-cpan-author:       DOY
gitpan-cpan-maturity:     developer

--- a/dist.ini
+++ b/dist.ini
@@ -10,7 +10,6 @@ awesome = =inc::MMPackageStash
 
 [Prereqs]
 perl = 5.8.3
-Dist::CheckConflicts = 0
 Package::DeprecationManager = 0
 Package::Stash::XS = 0
 Scalar::Util = 0
@@ -23,5 +22,8 @@ Test::Requires = 0
 [Prereqs / TestRecommends]
 Test::LeakTrace = 0
 
-[Prereqs / ConfigureRequires]
-Dist::CheckConflicts = 0
+[Conflicts]
+-script = bin/package-stash-conflicts
+Class::MOP                    = 1.08
+MooseX::Role::WithOverloading = 0.08
+namespace::clean              = 0.18
