--- a/META.yml
+++ b/META.yml
@@ -7,7 +7,7 @@ build_requires:
   Test::More: 0.88
   Test::Requires: 0
 configure_requires:
-  Dist::CheckConflicts: 0
+  Dist::CheckConflicts: 0.01
   ExtUtils::MakeMaker: 6.31
 dynamic_config: 0
 generated_by: 'Dist::Zilla version 4.200000, CPAN::Meta::Converter version 2.101670'
@@ -17,14 +17,13 @@ meta-spec:
   version: 1.4
 name: Package-Stash
 requires:
-  Dist::CheckConflicts: 0
   Package::DeprecationManager: 0
   Package::Stash::XS: 0
   Scalar::Util: 0
   perl: 5.8.3
 resources:
   repository: git://github.com/doy/package-stash.git
-version: 0.16
+version: 0.17
 x_Dist_Zilla:
   plugins:
     -
@@ -168,13 +167,9 @@ x_Dist_Zilla:
       name: TestRecommends
       version: 4.200000
     -
-      class: Dist::Zilla::Plugin::Prereqs
-      config:
-        Dist::Zilla::Plugin::Prereqs:
-          phase: configure
-          type: requires
-      name: ConfigureRequires
-      version: 4.200000
+      class: Dist::Zilla::Plugin::Conflicts
+      name: Conflicts
+      version: ~
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':InstallModules'
@@ -196,3 +191,7 @@ x_Dist_Zilla:
     config:
       is_trial: 1
     version: 4.200000
+x_conflicts:
+  Class::MOP: 1.08
+  MooseX::Role::WithOverloading: 0.08
+  namespace::clean: 0.18
