--- a/dist.ini
+++ b/dist.ini
@@ -9,7 +9,7 @@ dist = Package-Stash
 awesome = =inc::MMPackageStash
 
 [Prereqs]
-perl = 5.8.3
+perl = 5.8.1
 Package::DeprecationManager = 0
 Package::Stash::XS = 0.19
 Scalar::Util = 0
@@ -17,9 +17,8 @@ Scalar::Util = 0
 [Prereqs / TestRequires]
 Test::Fatal = 0
 Test::More = 0.88
-Test::Requires = 0
 
-[Prereqs / TestRecommends]
+[Prereqs / DevelopRequires]
 Test::LeakTrace = 0
 
 [Conflicts]
