--- a/dist.ini
+++ b/dist.ini
@@ -17,6 +17,7 @@ Scalar::Util = 0
 [Prereqs / TestRequires]
 Test::Fatal = 0
 Test::More = 0.88
+Test::Requires = 0
 
 [Prereqs / DevelopRequires]
 Test::LeakTrace = 0
