--- a/dist.ini
+++ b/dist.ini
@@ -7,11 +7,12 @@ copyright_holder = Jesse Luehrs
 :version = 0.05
 dist = Package-Stash
 awesome = =inc::MMPackageStash
+CompileTests_skip = Conflicts$
 
 [Prereqs]
 perl = 5.8.1
 Package::DeprecationManager = 0
-Package::Stash::XS = 0.21
+Package::Stash::XS = 0.22
 Scalar::Util = 0
 
 [Prereqs / TestRequires]
