Import of DOY/Package-Stash-0.27 from CPAN.
gitpan-cpan-distribution: Package-Stash
gitpan-cpan-version:      0.27
gitpan-cpan-path:         DOY/Package-Stash-0.27.tar.gz
gitpan-cpan-author:       DOY
gitpan-cpan-maturity:     released

--- a/dist.ini
+++ b/dist.ini
@@ -7,7 +7,7 @@ copyright_holder = Jesse Luehrs
 :version = 0.05
 dist = Package-Stash
 awesome = =inc::MMPackageStash
-CompileTests_skip = Conflicts$
+CompileTests_skip = [Cc]onflicts$
 
 [Prereqs]
 perl = 5.8.1
