--- a/META.yml
+++ b/META.yml
@@ -23,7 +23,7 @@ requires:
   perl: 5.8.1
 resources:
   repository: git://github.com/doy/package-stash.git
-version: 0.26
+version: 0.27
 x_Dist_Zilla:
   plugins:
     -
@@ -125,7 +125,7 @@ x_Dist_Zilla:
     -
       class: Dist::Zilla::Plugin::CompileTests
       name: '@DOY/CompileTests'
-      version: 1.103030
+      version: ~
     -
       class: Dist::Zilla::Plugin::Repository
       name: '@DOY/Repository'
