--- a/dist.ini
+++ b/dist.ini
@@ -9,11 +9,16 @@ dist = Package-Stash
 awesome = =inc::MMPackageStash
 CompileTests_skip = [Cc]onflicts$
 
+[=inc::DistMeta]
+dynamic_config = 1
+
 [Prereqs]
 perl = 5.8.1
 Package::DeprecationManager = 0
-Package::Stash::XS = 0.22
 Scalar::Util = 0
+
+[Prereqs / RuntimeRecommends]
+Package::Stash::XS = 0.22
 
 [Prereqs / TestRequires]
 Test::Fatal = 0
