Import of DOY/Package-Stash-0.33 from CPAN.
gitpan-cpan-distribution: Package-Stash
gitpan-cpan-version:      0.33
gitpan-cpan-path:         DOY/Package-Stash-0.33.tar.gz
gitpan-cpan-author:       DOY
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -10,7 +10,7 @@ configure_requires:
   Dist::CheckConflicts: 0.02
   ExtUtils::MakeMaker: 6.30
 dynamic_config: 1
-generated_by: 'Dist::Zilla version 4.200012, CPAN::Meta::Converter version 2.110440'
+generated_by: 'Dist::Zilla version 4.300002, CPAN::Meta::Converter version 2.110440'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -25,7 +25,7 @@ requires:
   perl: 5.8.1
 resources:
   repository: git://github.com/doy/package-stash.git
-version: 0.32
+version: 0.33
 x_Dist_Zilla:
   plugins:
     -
@@ -35,43 +35,43 @@ x_Dist_Zilla:
           phase: test
           type: requires
       name: '@DOY/TestMoreDoneTesting'
-      version: 4.200012
+      version: 4.300002
     -
       class: Dist::Zilla::Plugin::GatherDir
       name: '@DOY/GatherDir'
-      version: 4.200012
+      version: 4.300002
     -
       class: Dist::Zilla::Plugin::PruneCruft
       name: '@DOY/PruneCruft'
-      version: 4.200012
+      version: 4.300002
     -
       class: Dist::Zilla::Plugin::ManifestSkip
       name: '@DOY/ManifestSkip'
-      version: 4.200012
+      version: 4.300002
     -
       class: Dist::Zilla::Plugin::MetaYAML
       name: '@DOY/MetaYAML'
-      version: 4.200012
+      version: 4.300002
     -
       class: Dist::Zilla::Plugin::License
       name: '@DOY/License'
-      version: 4.200012
+      version: 4.300002
     -
       class: Dist::Zilla::Plugin::Readme
       name: '@DOY/Readme'
-      version: 4.200012
+      version: 4.300002
     -
       class: Dist::Zilla::Plugin::ExtraTests
       name: '@DOY/ExtraTests'
-      version: 4.200012
+      version: 4.300002
     -
       class: Dist::Zilla::Plugin::ExecDir
       name: '@DOY/ExecDir'
-      version: 4.200012
+      version: 4.300002
     -
       class: Dist::Zilla::Plugin::ShareDir
       name: '@DOY/ShareDir'
-      version: 4.200012
+      version: 4.300002
     -
       class: inc::MMPackageStash
       name: '@DOY/=inc::MMPackageStash'
@@ -79,27 +79,27 @@ x_Dist_Zilla:
     -
       class: Dist::Zilla::Plugin::Manifest
       name: '@DOY/Manifest'
-      version: 4.200012
+      version: 4.300002
     -
       class: Dist::Zilla::Plugin::TestRelease
       name: '@DOY/TestRelease'
-      version: 4.200012
+      version: 4.300002
     -
       class: Dist::Zilla::Plugin::ConfirmRelease
       name: '@DOY/ConfirmRelease'
-      version: 4.200012
+      version: 4.300002
     -
       class: Dist::Zilla::Plugin::MetaConfig
       name: '@DOY/MetaConfig'
-      version: 4.200012
+      version: 4.300002
     -
       class: Dist::Zilla::Plugin::MetaJSON
       name: '@DOY/MetaJSON'
-      version: 4.200012
+      version: 4.300002
     -
       class: Dist::Zilla::Plugin::NextRelease
       name: '@DOY/NextRelease'
-      version: 4.200012
+      version: 4.300002
     -
       class: Dist::Zilla::Plugin::CheckChangesHasContent
       name: '@DOY/CheckChangesHasContent'
@@ -107,15 +107,15 @@ x_Dist_Zilla:
     -
       class: Dist::Zilla::Plugin::PkgVersion
       name: '@DOY/PkgVersion'
-      version: 4.200012
+      version: 4.300002
     -
       class: Dist::Zilla::Plugin::PodCoverageTests
       name: '@DOY/PodCoverageTests'
-      version: 4.200012
+      version: 4.300002
     -
       class: Dist::Zilla::Plugin::PodSyntaxTests
       name: '@DOY/PodSyntaxTests'
-      version: 4.200012
+      version: 4.300002
     -
       class: Dist::Zilla::Plugin::NoTabsTests
       name: '@DOY/NoTabsTests'
@@ -151,7 +151,7 @@ x_Dist_Zilla:
     -
       class: Dist::Zilla::Plugin::UploadToCPAN
       name: '@DOY/UploadToCPAN'
-      version: 4.200012
+      version: 4.300002
     -
       class: inc::DistMeta
       name: '=inc::DistMeta'
@@ -163,7 +163,7 @@ x_Dist_Zilla:
           phase: runtime
           type: requires
       name: Prereqs
-      version: 4.200012
+      version: 4.300002
     -
       class: Dist::Zilla::Plugin::Prereqs
       config:
@@ -171,7 +171,7 @@ x_Dist_Zilla:
           phase: runtime
           type: recommends
       name: RuntimeRecommends
-      version: 4.200012
+      version: 4.300002
     -
       class: Dist::Zilla::Plugin::Prereqs
       config:
@@ -179,7 +179,7 @@ x_Dist_Zilla:
           phase: test
           type: requires
       name: TestRequires
-      version: 4.200012
+      version: 4.300002
     -
       class: Dist::Zilla::Plugin::Prereqs
       config:
@@ -187,7 +187,7 @@ x_Dist_Zilla:
           phase: develop
           type: requires
       name: DevelopRequires
-      version: 4.200012
+      version: 4.300002
     -
       class: Dist::Zilla::Plugin::Conflicts
       name: Conflicts
@@ -195,33 +195,34 @@ x_Dist_Zilla:
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':InstallModules'
-      version: 4.200012
+      version: 4.300002
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':IncModules'
-      version: 4.200012
+      version: 4.300002
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':TestFiles'
-      version: 4.200012
+      version: 4.300002
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':ExecFiles'
-      version: 4.200012
+      version: 4.300002
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':ShareFiles'
-      version: 4.200012
+      version: 4.300002
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':MainModule'
-      version: 4.200012
+      version: 4.300002
   zilla:
     class: Dist::Zilla::Dist::Builder
     config:
       is_trial: 0
-    version: 4.200012
+    version: 4.300002
 x_conflicts:
   Class::MOP: 1.08
+  MooseX::Method::Signatures: 0.36
   MooseX::Role::WithOverloading: 0.08
   namespace::clean: 0.18
