--- a/dist.ini
+++ b/dist.ini
@@ -33,3 +33,4 @@ Test::LeakTrace = 0
 Class::MOP                    = 1.08
 MooseX::Role::WithOverloading = 0.08
 namespace::clean              = 0.18
+MooseX::Method::Signatures    = 0.36
