Import of DOY/Package-Stash-0.35 from CPAN.
gitpan-cpan-distribution: Package-Stash
gitpan-cpan-version:      0.35
gitpan-cpan-path:         DOY/Package-Stash-0.35.tar.gz
gitpan-cpan-author:       DOY
gitpan-cpan-maturity:     released

--- a/dist.ini
+++ b/dist.ini
@@ -1,12 +1,14 @@
 name = Package-Stash
-author = Jesse Luehrs <doy at tozt dot net>
+author = Jesse Luehrs <doy@tozt.net>
 license = Perl_5
 copyright_holder = Jesse Luehrs
 
 [@DOY]
-:version = 0.05
+:version = 0.11
 dist = Package-Stash
 repository = github
+bugtracker_web = https://github.com/doy/package-stash/issues
+bugtracker_mailto =
 awesome = =inc::MMPackageStash
 CompileTests_skip = [Cc]onflicts$
 
@@ -27,3 +29,5 @@ Class::MOP                    = 1.08
 MooseX::Role::WithOverloading = 0.08
 namespace::clean              = 0.18
 MooseX::Method::Signatures    = 0.36
+
+[ContributorsFromGit]
