Import of DOY/Package-Stash-0.36 from CPAN.
gitpan-cpan-distribution: Package-Stash
gitpan-cpan-version:      0.36
gitpan-cpan-path:         DOY/Package-Stash-0.36.tar.gz
gitpan-cpan-author:       DOY
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -9,16 +9,27 @@ build_requires:
   Test::More: 0.88
   Test::Requires: 0
   base: 0
+  lib: 0
 configure_requires:
+  Config: 0
   Dist::CheckConflicts: 0.02
   ExtUtils::MakeMaker: 6.30
+  File::Spec: 0
+  Text::ParseWords: 0
 dynamic_config: 1
-generated_by: 'Dist::Zilla version 4.300034, CPAN::Meta::Converter version 2.120921'
+generated_by: 'Dist::Zilla version 4.300035, CPAN::Meta::Converter version 2.132140'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
   version: 1.4
 name: Package-Stash
+provides:
+  Package::Stash:
+    file: lib/Package/Stash.pm
+    version: 0.36
+  Package::Stash::PP:
+    file: lib/Package/Stash/PP.pm
+    version: 0.36
 recommends:
   Package::Stash::XS: 0.26
 requires:
@@ -37,10 +48,10 @@ resources:
   bugtracker: https://github.com/doy/package-stash/issues
   homepage: http://metacpan.org/release/Package-Stash
   repository: git://github.com/doy/package-stash.git
-version: 0.35
+version: 0.36
 x_Dist_Zilla:
   perl:
-    version: 5.018000
+    version: 5.018001
   plugins:
     -
       class: Dist::Zilla::Plugin::Prereqs
@@ -49,31 +60,31 @@ x_Dist_Zilla:
           phase: test
           type: requires
       name: '@DOY/TestMoreDoneTesting'
-      version: 4.300034
+      version: 4.300035
     -
       class: Dist::Zilla::Plugin::GatherDir
       name: '@DOY/GatherDir'
-      version: 4.300034
+      version: 4.300035
     -
       class: Dist::Zilla::Plugin::PruneCruft
       name: '@DOY/PruneCruft'
-      version: 4.300034
+      version: 4.300035
     -
       class: Dist::Zilla::Plugin::ManifestSkip
       name: '@DOY/ManifestSkip'
-      version: 4.300034
+      version: 4.300035
     -
       class: Dist::Zilla::Plugin::MetaYAML
       name: '@DOY/MetaYAML'
-      version: 4.300034
+      version: 4.300035
     -
       class: Dist::Zilla::Plugin::License
       name: '@DOY/License'
-      version: 4.300034
+      version: 4.300035
     -
       class: Dist::Zilla::Plugin::Readme
       name: '@DOY/Readme'
-      version: 4.300034
+      version: 4.300035
     -
       class: Dist::Zilla::Plugin::RunExtraTests
       name: '@DOY/RunExtraTests'
@@ -81,11 +92,11 @@ x_Dist_Zilla:
     -
       class: Dist::Zilla::Plugin::ExecDir
       name: '@DOY/ExecDir'
-      version: 4.300034
+      version: 4.300035
     -
       class: Dist::Zilla::Plugin::ShareDir
       name: '@DOY/ShareDir'
-      version: 4.300034
+      version: 4.300035
     -
       class: inc::MMPackageStash
       name: '@DOY/=inc::MMPackageStash'
@@ -93,27 +104,27 @@ x_Dist_Zilla:
     -
       class: Dist::Zilla::Plugin::Manifest
       name: '@DOY/Manifest'
-      version: 4.300034
+      version: 4.300035
     -
       class: Dist::Zilla::Plugin::TestRelease
       name: '@DOY/TestRelease'
-      version: 4.300034
+      version: 4.300035
     -
       class: Dist::Zilla::Plugin::ConfirmRelease
       name: '@DOY/ConfirmRelease'
-      version: 4.300034
+      version: 4.300035
     -
       class: Dist::Zilla::Plugin::MetaConfig
       name: '@DOY/MetaConfig'
-      version: 4.300034
+      version: 4.300035
     -
       class: Dist::Zilla::Plugin::MetaJSON
       name: '@DOY/MetaJSON'
-      version: 4.300034
+      version: 4.300035
     -
       class: Dist::Zilla::Plugin::NextRelease
       name: '@DOY/NextRelease'
-      version: 4.300034
+      version: 4.300035
     -
       class: Dist::Zilla::Plugin::CheckChangesHasContent
       name: '@DOY/CheckChangesHasContent'
@@ -121,7 +132,7 @@ x_Dist_Zilla:
     -
       class: Dist::Zilla::Plugin::PkgVersion
       name: '@DOY/PkgVersion'
-      version: 4.300034
+      version: 4.300035
     -
       class: Dist::Zilla::Plugin::Authority
       name: '@DOY/Authority'
@@ -129,11 +140,11 @@ x_Dist_Zilla:
     -
       class: Dist::Zilla::Plugin::PodCoverageTests
       name: '@DOY/PodCoverageTests'
-      version: 4.300034
+      version: 4.300035
     -
       class: Dist::Zilla::Plugin::PodSyntaxTests
       name: '@DOY/PodSyntaxTests'
-      version: 4.300034
+      version: 4.300035
     -
       class: Dist::Zilla::Plugin::NoTabsTests
       name: '@DOY/NoTabsTests'
@@ -153,7 +164,7 @@ x_Dist_Zilla:
     -
       class: Dist::Zilla::Plugin::MetaResources
       name: '@DOY/MetaResources'
-      version: 4.300034
+      version: 4.300035
     -
       class: Dist::Zilla::Plugin::Git::Check
       name: '@DOY/Git::Check'
@@ -171,21 +182,25 @@ x_Dist_Zilla:
       name: '@DOY/Git::NextVersion'
       version: 2.013
     -
+      class: Dist::Zilla::Plugin::ContributorsFromGit
+      name: '@DOY/ContributorsFromGit'
+      version: 0.006
+    -
+      class: Dist::Zilla::Plugin::MetaProvides::Package
+      name: '@DOY/MetaProvides::Package'
+      version: 1.14000002
+    -
       class: Dist::Zilla::Plugin::PodWeaver
       name: '@DOY/PodWeaver'
       version: 3.101641
     -
       class: Dist::Zilla::Plugin::UploadToCPAN
       name: '@DOY/UploadToCPAN'
-      version: 4.300034
-    -
-      class: inc::DistMeta
-      name: '=inc::DistMeta'
-      version: ~
+      version: 4.300035
     -
       class: Dist::Zilla::Plugin::AutoPrereqs
       name: AutoPrereqs
-      version: 4.300034
+      version: 4.300035
     -
       class: Dist::Zilla::Plugin::Prereqs
       config:
@@ -193,7 +208,7 @@ x_Dist_Zilla:
           phase: runtime
           type: recommends
       name: RuntimeRecommends
-      version: 4.300034
+      version: 4.300035
     -
       class: Dist::Zilla::Plugin::Prereqs
       config:
@@ -201,44 +216,40 @@ x_Dist_Zilla:
           phase: develop
           type: requires
       name: DevelopRequires
-      version: 4.300034
+      version: 4.300035
     -
       class: Dist::Zilla::Plugin::Conflicts
       name: Conflicts
       version: 0.10
     -
-      class: Dist::Zilla::Plugin::ContributorsFromGit
-      name: ContributorsFromGit
-      version: 0.006
-    -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':InstallModules'
-      version: 4.300034
+      version: 4.300035
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':IncModules'
-      version: 4.300034
+      version: 4.300035
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':TestFiles'
-      version: 4.300034
+      version: 4.300035
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':ExecFiles'
-      version: 4.300034
+      version: 4.300035
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':ShareFiles'
-      version: 4.300034
+      version: 4.300035
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':MainModule'
-      version: 4.300034
+      version: 4.300035
   zilla:
     class: Dist::Zilla::Dist::Builder
     config:
       is_trial: 0
-    version: 4.300034
+    version: 4.300035
 x_authority: cpan:DOY
 x_breaks:
   Class::MOP: 1.08
@@ -250,4 +261,5 @@ x_contributors:
   - 'Christian Walde <walde.christian@googlemail.com>'
   - 'Dave Rolsky <autarch@urth.org>'
   - 'Justin Hunter <justin.d.hunter@gmail.com>'
+  - 'Kent Fredric <kentfredric@gmail.com>'
   - 'Tim Bunce <Tim.Bunce@pobox.com>'
